--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>netty-codec-http</artifactId>
         </dependency>
 
+        <!--   参考 https://netty.io/wiki/native-transports.html 使用-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport-native-epoll</artifactId>
+            <classifier>linux-x86_64</classifier>
+        </dependency>
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
