--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
                 <profile>prod</profile>
             </properties>
         </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <profile>test</profile>
+            </properties>
+        </profile>
     </profiles>
 
     <build>
