feat: 双向消息桥接

--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 
         <!--    提供桥接功能    -->
         <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
         </dependency>
 
         <dependency>
