--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -63,6 +63,9 @@
       "values": [
         {
           "value": "redis"
+        },
+        {
+          "value": "kafka"
         }
       ]
     }
